tests/neg-custom-args/explain/i16601a.scala
@main def Test: Unit = new concurrent.ExecutionContext  // error